<resources>
    <string name="app_name">Flatlet</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">aa12950e3b99380921f626aa8d066635</string>
    <string name="click_here_to_load_json_data_into_recyclerview">Click Here to load JSON data into RecyclerView</string>
    <string name="subject">Subject :</string>
    <string name="subject_show_here">Subject Show Here</string>
    <string name="phone_number_show">Phone Number Show</string>
    <string name="phone_number">Phone Number :</string>
    <string name="name_show_here">Name Show Here</string>
    <string name="name">Name :</string>
    <string name="id_show_here">ID Show Here</string>
    <string name="app_label">SearchView</string>
    <string name="search_hint">search by locality</string>
    <string name="city_name">Search for your dream home in KOTA</string>
    <string-array name="localityArray">
        <item>Mahaveer Nagar 1</item>
        <item>Rajeev Gandhi Nagar</item>
        <item>New Rajeev Gandhi Nagar</item>
        <item>Kunhadi</item>
    </string-array>
    <string-array name="coachingArray">
        <item>Aakash Institute</item>
        <item>Ables Education</item>
        <item>Allen Career Institute</item>
        <item>Bansal Classes</item>
        <item>Btrix Medical Classes</item>
        <item>Career Point</item>
        <item>Etoos Education</item>
        <item>Motion</item>
        <item>Nucleus Education</item>
        <item>Photon Academy</item>
        <item>Resonance</item>
        <item>Vibrant Academy</item>

    </string-array>
    <string-array name="aakashArray">
        <item>PMC Tower CP-13 Indra Vihar </item>
    </string-array>
    <string-array name="ablesArray">
        <item>Ables</item>
    </string-array>
    <string-array name="allenArray">
        <item>Saakar</item>
        <item>Sabal</item>
        <item>Safalya 1,2</item>
        <item>Safalya 3</item>
        <item>Samanvaya</item>
        <item>Samarth</item>
        <item>Samayik</item>
        <item>Samyak</item>
        <item>Sangyan</item>
        <item>Sankalp</item>
        <item>Sarokar</item>
        <item>Satyarth</item>
        <item>Savinay</item>
        <item>Sukalp</item>
    </string-array>
    <string-array name="bansalArray">
        <item>Bansal Tower A-10 IPIA Road</item>

    </string-array>
    <string-array name="btrixArray">
        <item>Btrix</item>
    </string-array>
    <string-array name="cpArray">
        <item>CP Tower 1,2</item>
        <item>CP 112-B Shakti Nagar</item>
    </string-array>
    <string-array name="etoosArray">
        <item>Etoos</item>
    </string-array>
    <string-array name="nucleusArray">
        <item>Nucleus 92 RGN </item>
    </string-array>
    <string-array name="photonArray">
        <item>Photon Academy</item>
    </string-array>
    <string-array name="resonanceArray">
        <item>CG Tower A-46</item>
        <item>C-13 New Jawahar Nagar</item>
        <item>J2 Jawahar Nagar</item>
        <item>CLPD Campus Talwandi</item>
        <item>Medical and PCCP Division</item>
        <item>Station Campus</item>
    </string-array>
    <string-array name="vibrantArray">
        <item>Vibrant Tower A-14(A)</item>
    </string-array>
    <string name="id">ID :</string>
    <string name="hostel_rent">hostel_rent</string>
    <string name="hostel_title">hostel_title</string>
    <string name="hostel_address">hostel_Address</string>
    <string name="it_is_the_xml_for_viewpager_used_in_activity2">It is the xml for viewpager used in activity2</string>
    <string name="recent_news">Da Nang International Fireworks</string>
    <string name="details">Details</string>
    <string name="only_for">Only For</string>
    <string name="boys">Boys</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="_3">3</string>
    <string name="food_preference">Food Preference</string>
    <string name="veg">Veg</string>
    <string name="house_address">House Address</string>
    <string name="size">Size</string>
    <string name="_1500_sqft">1500 sqft</string>
    <string name="hostel_id">hostel Id</string>
    <string name="rules">Rules</string>
    <string name="view">View</string>
    <string name="n11010">N11010</string>
    <string name="primary_card">Primary Card</string>
    <string name="_1bhk">1BHK</string>
    <string name="text1">This the text inside this fragment</string>
    <string name="apartment">Apartment</string>
    <string name="_10000">₹10000</string>
    <string name="www_flatlet_in">www.flatlet.in</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="discovery_arrays">
        <item>Boys</item>
        <item>Girls</item>
    </string-array>
    <string name="owner">Owner</string>
    <string name="cctv">CCTV</string>
    <string name="attached_toilet">Attached Toilet</string>
    <string name="evening_snacks">Evening Snacks</string>
    <string name="elevator">Elevator</string>
    <string name="tenant_type">Tenant Type</string>
    <string name="girls">Girls</string>
    <string name="room_type">Room Type</string>
    <string name="price_high_to_low">₹↓ Price - high to low</string>
    <string name="price_low_to_high">₹↑ Price - low to high</string>
    <string name="a_area_low_to_high">A↑ Area - low to high</string>
    <string name="a_area_high_to_low">A↓ Area - high to low</string>
    <string name="Flatlet">Flatlet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="discovery">discovery</string>
    <string name="profile">profile</string>
    <string name="favourites">favourites</string>
    <string name="more">more</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="enter_locality_here">Enter Locality here</string>
    <string name="rent">Rent</string>
    <string name="single_non_ac">Single Non-AC</string>
    <string name="tenpowerthree">₹10000</string>
    <string name="single_ac">Single AC</string>
    <string name="_11500">11500</string>
    <string name="double_non_ac">Double Non-AC</string>
    <string name="_14000">14000</string>
    <string name="double_ac">Double AC</string>
    <string name="_18000">18000</string>
    <string name="amenities">Amenities</string>
    <string name="security_image_vector">security image vector</string>
    <string name="_5_more">+5 more</string>
    <string name="title_3">Title 3</string>
    <string name="textview">TextView</string>
    <string name="specification">Specification</string>
    <string name="area_single_room_sqft">Area Single Room(sqft)*</string>
    <string name="area_double_room_sqft">Area Double Room(sqft)*</string>
    <string name="n_a">N/A</string>
    <string name="locality">Locality</string>
    <string name="non_ac">Non AC</string>
    <string name="ac">AC</string>
    <string name="air_cooling">Air Cooling</string>
    <string name="single_room">Single Room</string>
    <string name="double_room">Double Room</string>
    <string name="progress">progress</string>
    <string name="set_max_rent">Set Max Rent</string>
    <string name="facebook_app_id">119030078752902</string>
    <string name="fb_login_protocol_scheme">fb261128957726181</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">User Name</string>
    <string name="logout">LOGOUT</string>
    <string name="user_mobile_no">User Mobile No</string>
    <string name="edit">Edit</string>
    <string name="user_email">User Email</string>
    <string name="_6_more">+6 more</string>
    <string name="rating">Rating</string>
    <string name="food">Food</string>
    <string name="accommodation">Accommodation</string>
    <string name="staff_behaviour">Staff Behaviour</string>
    <string name="study_environment">Study Environment</string>
    <string name="submit">Submit</string>
    <string name="edit_ratings">Edit Ratings</string>
    <string name="location_1">Location 1</string>
    <string name="personal_details">Personal Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_name">Your Name</string>
    <string name="email_id_optional">Email Id</string>
    <string name="your_identity">Your Identity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_profile">Proceed</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="note">* Area shown here is the area of a typical room in that building.Actual area might differ.</string>
    <string name="welcome_one_text">We help you find a hostel of your choice and budget, all within the app</string>
    <string name="hey_there">Hey There!</string>
    <string name="welcome_two_text">Explore the hostels from the largest database of Kota. Starting as low as 7000₹ per month</string>
    <string name="explore">Explore</string>
    <string name="welcome_three_text">Experience Every Corner of the room with our 360° Virtual Tour and High field view Panoramas</string>
    <string name="experience">Experience</string>
    <string name="welcome_three_footer">P.S. Some useful abbreviation in Kota.\nPG: A room without food \nHostel: A room including food</string>
    <string name="about_us"><![CDATA[Flatlet is Kota’s fastest growing hostel rental network attempting to provide a better rental solution via design and technology. We help you find a hostel all within the app. Experience the Revolutionary high field view Panoramas and 360° Virtual Tour from Kota’s largest hostel database. Whatever is your budget (7000 ₹ to 19000 ₹), We have something for you. At the current time, we have hostels listed in Mahavir Nagar 1, Rajeev Gandhi Nagar, New Rajeev Gandhi Nagar. Drop by & say Hi ! to us before it’s too late. We are at]]></string>
    <string name="refund">Generally 1 month\'s rent is deposited as security money. Please ask the Refund rules to the landlord beforehand.</string>
    <string name="favourite">Favourite</string>
    <string name="search_for_your_hostel">Search for your Hostel</string>
    <string name="welcome_to_flatlet">Welcome To Flatlet</string>
    <string name="get_started">Get Started</string>
    <string name="flatletindia_gmail_com">flatletindia@gmail.com</string>
    <string name="gender">Gender</string>
    <string name="phone_numbe">Phone number*</string>
    <string name="email_addres">Email address*</string>
    <string name="report_this_hostel">Report this Hostel</string>
    <string name="experience_360_virtual_tour">Experience 360° Virtual Tour</string>
    <string name="rate_your_hostel">Rate your Hostel</string>
    <string name="explore_hostels_for_boys">Explore Hostels for Boys</string>
    <string name="explore_hostels_for_girls">Explore Hostels for Girls</string>
    <string name="find_the_hostel_in_9_easy_steps">Find the hostel in 9 easy steps</string>
    <string name="step1_click_on_the_enter_locality_here">STEP1: Click on the \'Enter locality here\'.</string>
    <string name="step2_select_the_locality_gender_and_type_of_room_single_double_select_the_air_conditioning_and_press_search_button">STEP2: Select the locality, gender and type of room (single/double) select the Air conditioning and press Search Button</string>
    <string name="step3_click_on_the_filter_button_placed_in_right_bottom_corner">STEP3: Click on the Filter button placed in right bottom corner.</string>
    <string name="step4_select_the_essentials_you_are_looking_for">STEP4:Select the essentials you are looking for</string>
    <string name="step5_sort_the_results_according_to_price_or_area_of_the_room">STEP5:Sort the results according to Price or Area of the room.</string>
</resources>