<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/set_max_rent"
                    android:textSize="@dimen/welcome_subtitle"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv2"
                    android:text="@string/progress"
                    android:textSize="@dimen/welcome_subtitle"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_alignBottom="@+id/tv1"/>
                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv1" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tenantType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tenant_type"
                    android:textSize="@dimen/welcome_subtitle"
                    android:textStyle="bold" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tenantType"
                    android:weightSum="2"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/checkBoxGirls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/girls"
                        android:textSize="@dimen/welcome_subtitle" />


                    <RadioButton
                        android:id="@+id/checkBoxBoys"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/welcome_subtitle"
                        android:text="@string/boys"
                        android:layout_weight="1"/>

                </RadioGroup>
            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/roomType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/room_type"
                    android:textSize="@dimen/welcome_subtitle"
                    android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/roomType"
                android:weightSum="2"
                android:padding="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/checkBoxDoubleRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/double_room"
                    android:textSize="@dimen/welcome_subtitle"/>

                <RadioButton
                    android:id="@+id/checkBoxSingleRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/single_room"
                    android:layout_weight="1"
                    android:textSize="@dimen/welcome_subtitle" />
            </RadioGroup>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/airCooling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/air_cooling"
                    android:textSize="@dimen/welcome_subtitle"
                    android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/airCooling"
                android:weightSum="2"
                android:padding="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/checkBoxAc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ac"
                    android:checked="true"
                    android:textSize="@dimen/welcome_subtitle"
                   />

                <RadioButton
                    android:id="@+id/checkBoxNonAc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/welcome_subtitle"
                    android:text="@string/non_ac" />

            </RadioGroup>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            android:layout_marginBottom="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/title_ame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/amenities"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkBoxElevator"
                    android:layout_below="@+id/title_ame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/elevator"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBoxEveningSnacks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/checkBoxElevator"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/checkBoxElevator"
                    android:text="@string/evening_snacks"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBoxCCTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/checkBoxEveningSnacks"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/checkBoxEveningSnacks"
                    android:text="@string/cctv"
                    android:textSize="14sp"
                    android:marqueeRepeatLimit="marquee_forever" />
                <CheckBox
                    android:id="@+id/checkBoxOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/checkBoxElevator"
                    android:layout_below="@+id/checkBoxElevator"
                    android:text="@string/owner"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"/>

                <CheckBox
                    android:id="@+id/checkBoxToiletAttached"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/checkBoxEveningSnacks"
                    android:layout_below="@+id/checkBoxEveningSnacks"
                    android:text="@string/attached_toilet"
                    android:textSize="14sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>