<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/food" />

    <RatingBar
        android:id="@+id/ratingBarFoodFrag"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="5"
        android:stepSize="0.1" />

    <TextView
        android:id="@+id/textViewacco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/accommodation" />

    <RatingBar
        android:id="@+id/ratingBarAccommodationFrag"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="5"
        android:stepSize="0.1" />


    <TextView
        android:id="@+id/textViewStaff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/staff_behaviour" />

    <RatingBar
        android:id="@+id/ratingBarStaffFrag"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="5"
        android:stepSize="0.1" />


    <TextView
        android:id="@+id/textViewStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/study_environment" />

    <RatingBar
        android:id="@+id/ratingBarStudyEnvironmentFrag"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="5"
        android:stepSize="0.1" />
</RelativeLayout>