<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview1"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginBottom=".5dp"
    android:layout_marginTop="5dp"
    app:cardElevation="2dp"
    android:padding="2dp">

    <RelativeLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:mockup_opacity="5"
            android:textOn=""
            android:textOff=""
            android:checked="true"
            android:background="@drawable/ic_favorite_white_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"/>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:padding="10dp"
            app:srcCompat="@android:drawable/editbox_dropdown_light_frame"
            android:contentDescription="@string/primary_card"
            android:layout_above="@+id/linearLayout" />
        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/hostel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hostel_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hostel_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hostel_rent"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/hostel_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hostel_address"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
